crates/frust-tui/tests/snapshots/snapshots__welcome_screen_80x24.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(80, 24, &state)"
---
                                                           toolchain ◌ checking…
                                                                                
                                                                                
                                                                                
                                                                                
                               █▀▀ █▀█ █░█ █▀ ▀█▀                               
                               █▀░ █▀▄ █▄█ ▄█ ░█░                               
                               ━━━━━━━━━━━━━━━━━━                               
                                                                                
                               FEARLESS UI IN RUST                              
                                                                                
                    No Frust project found in this directory.                   
                                                                                
                 ╭────────────────────────────────────────────╮                 
                 │                                            │                 
                 │        ⚒  Create a new Frust project       │                 
                 │                                            │                 
                 ╰────────────────────────────────────────────╯                 
                                                                                
                                Enter · or click                                
                                                                                
                                                                                
                                                                                
? help · ⌘ palette · a add plugin · q quit                             [mouse ✓]
