crates/frust-tui/tests/snapshots/snapshots__wizard_arch_step_sibling_absent_80x24.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(80, 24, &wizard_state(WizardStep::Arch, \"my_app\", false, 1))"
---
                                                           toolchain ◌ checking…
                                                                                
                                                                                
                                                                                
                                                                                
        ╭ New Frust project ───────────────────────────────────────────╮        
        │                                                              │▓▓      
        │  Step 3 of 3  ·  Architecture                                │▓▓      
        │                                                              │▓▓      
        │  Architecture                                                │▓▓      
        │    ( ) Default                                               │▓▓      
        │        The standard notes-app template.                      │▓▓      
        │  ▸ (o) Clean Signals                                         │▓▓      
        │        ✗ needs the ../clean-signals-rs sibling checkout (de  │▓▓      
        │                                                              │▓▓      
        │   Back    Create    Cancel                                   │▓▓      
        │  ↑/↓ choose · Enter create · Esc back                        │▓▓      
        ╰──────────────────────────────────────────────────────────────╯▓▓      
          ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓      
                                Enter · or click                                
                                                                                
                                                                                
                                                                                
? help · ⌘ palette · a add plugin · q quit                             [mouse ✓]
