crates/frust-tui/tests/snapshots/snapshots__wizard_name_step_80x24.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(80, 24, &wizard_state(WizardStep::Name, \"my_app\", false, 0))"
---
                                                           toolchain ◌ checking…
                                                                                
                                                                                
                                                                                
                                                                                
                               █▀▀ █▀█ █░█ █▀ ▀█▀                               
        ╭ New Frust project ───────────────────────────────────────────╮        
        │                                                              │▓▓      
        │  Step 1 of 3  ·  Name                                        │▓▓      
        │                                                              │▓▓      
        │  Name       my_app█                                          │▓▓      
        │  A lowercase crate name (a-z, 0-9, _).                       │▓▓      
        │                                                              │▓▓      
        │                                                              │▓▓      
        │   Back    Next    Cancel                                     │▓▓      
        │  Type · Enter next · Esc back                                │▓▓      
        ╰──────────────────────────────────────────────────────────────╯▓▓      
          ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓      
                                                                                
                                Enter · or click                                
                                                                                
                                                                                
                                                                                
? help · ⌘ palette · q quit                                            [mouse ✓]
