crates/frust-tui/tests/snapshots/snapshots__workbench_multi_project_sidebar_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &multi_project_workbench_state())"
---
⚙ Frust │ bubblebench ▾ · frust 0.1.0 · ◌ checking…                                ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ bubblebench          │  Dashboard                                                               
    huddle               │  ━━━━━━━━━━                                                              
                         │                                                                          
 DEVICES ↻ r             │  No session running — start a run to open a log tab here.                
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   none running          │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
