crates/frust-tui/tests/snapshots/snapshots__workbench_narrow_sidebar_overlay_open_70x24.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(70, 24, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…       ▶ Run    ⚒ Build 
━━━━━━━━                                                              
                                                                      
┌ Sidebar · Esc/s close ───────┐                                      
│ PROJECTS                    ││                                      
│  ▸ huddle                   ││                                      
│                             ││                                      
│ DEVICES ↻ r                 ││un to open a log tab here.            
│   none found                ││                                      
│                             ││                                      
│ SESSIONS                    ││                                      
│   none running              ││                                      
│                             ││                                      
│ ACTIONS                     ││                                      
│   New project · n           ││                                      
│   Add plugin · a            ││                                      
│   Doctor · d                ││                                      
│   Build · b                 ││                                      
│   Clean · c                 ││                                      
│   MCP off · M               ││                                      
│   DAP off · D               ││                                      
│                             ││                                      
└──────────────────────────────┘                                      
● ready  │  r run · b build · d doctor · ⌘ palette · ? help ·[mouse ✓]
