crates/frust-tui/tests/snapshots/snapshots__workbench_resized_sidebar_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                              │                                                            
  ▸ huddle                             │  Dashboard                                                 
                                       │  ━━━━━━━━━━                                                
 DEVICES ↻ r                           │                                                            
   none found                          │  No session running — start a run to open a log tab here.  
                                       │                                                            
 SESSIONS                              │                                                            
   none running                        │                                                            
                                       │                                                            
 ACTIONS                               │                                                            
   New project · n                     │                                                            
   Add plugin · a                      │                                                            
   Doctor · i                          │                                                            
   Build · b                           │                                                            
   Clean · c                           │                                                            
   MCP off · M                         │                                                            
   DAP off · D                         │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
                                       │                                                            
● ready  │  r run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
